--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.praveensmedia.mynodemcuconfig_control">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,33 +13,34 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="AllowBackup"
+        tools:targetApi="n">
+        <activity android:name=".ui.Config"
+            android:screenOrientation="portrait"/>
+        <activity android:name=".ui.Home"
+            android:screenOrientation="portrait"/>
+
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="ca-app-pub-1910150019561767~7064505214" />
-
-
-        <activity
-            android:name=".ControlNodeMCU"
-            android:label="@string/ctrlScrnName"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait" />
+            android:value="@string/appIDforAds" />
+        <meta-data
+            android:name="preloaded_fonts"
+            android:resource="@array/preloaded_fonts" />
 
         <activity
-            android:name=".ESP_Config"
-            android:label="@string/confScrn"
-            android:configChanges="orientation"
+            android:name=".ui.Controls"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait">
+            android:name=".SplashScreen"
+            android:screenOrientation="portrait"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <!--
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
@@ -46,9 +48,10 @@
                 <category android:name="android.intent.category.BROWSABLE" />
 
                 <data
-                    android:scheme="https"
-                    android:host="praveensmedia.com" />
+                    android:host="praveensmedia.com"
+                    android:scheme="https" />
             </intent-filter>
+            -->
         </activity>
     </application>
 
