--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,9 +17,11 @@
         tools:ignore="AllowBackup"
         tools:targetApi="n">
         <activity android:name=".ui.Config"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:configChanges="uiMode"/>
         <activity android:name=".ui.Home"
-            android:screenOrientation="portrait"/>
+            android:screenOrientation="portrait"
+            android:configChanges="uiMode"/>
 
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
@@ -30,10 +32,12 @@
 
         <activity
             android:name=".ui.Controls"
-            android:screenOrientation="portrait" />
+            android:screenOrientation="portrait"
+            android:configChanges="uiMode"/>
         <activity
             android:name=".SplashScreen"
             android:screenOrientation="portrait"
+            android:configChanges="uiMode"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
