--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,29 +16,28 @@
         android:theme="@style/AppTheme"
         tools:ignore="AllowBackup"
         tools:targetApi="n">
-        <activity android:name=".ui.Config"
-            android:screenOrientation="portrait"
-            android:configChanges="uiMode"/>
-        <activity android:name=".ui.Home"
-            android:screenOrientation="portrait"
-            android:configChanges="uiMode"/>
+        <activity
+            android:name=".ui.Config"
+            android:configChanges="uiMode"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".ui.Home"
+            android:configChanges="uiMode"
+            android:screenOrientation="portrait" />
 
-        <meta-data
-            android:name="com.google.android.gms.ads.APPLICATION_ID"
-            android:value="@string/appIDforAds" />
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
 
         <activity
             android:name=".ui.Controls"
-            android:screenOrientation="portrait"
-            android:configChanges="uiMode"/>
+            android:configChanges="uiMode"
+            android:screenOrientation="portrait" />
         <activity
             android:name=".SplashScreen"
-            android:screenOrientation="portrait"
             android:configChanges="uiMode"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
